--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+out/
 
 # Local machine/session files
 .claude/
