--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ out/
 **/topopt_iterations/
 **/densities.csv
 **/topopt_history.csv
+**/topopt_literature_runs.csv
+**/topopt_literature_checks.csv
+**/literature_runs/
 **/series.pvd
 **/step_*.vtk
 **/step_*.png
